Cambios de la persona 2

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
         </div>
-          
+          <p>Cambios de la persona 2</p>
     </header>
 
     <main>
