--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <main>
-        <img class="banner" src="Imagenes/banner.jpg">
+        <img class="banner" src="imagenes/banner.jpg">
 
     <section class="container-principal">
         <h2 class="titulo-principal"> Babería Alura</h2>
@@ -63,7 +63,7 @@
                 <li class="item">Los mejores precios del mercado</li>
                 <li class="item">Puntualidad</li>
                 <li class="item">Limpieza</li>
-            </ul><img class="img-diferenciales" src="Imagenes/diferenciales.jpg" >
+            </ul><img class="img-diferenciales" src="imagenes/diferenciales.jpg" >
         </div>
         
         <div class="video-b">
