Se arreglan rutas imagenes

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <li class="item">Los mejores precios del mercado</li>
                 <li class="item">Puntualidad</li>
                 <li class="item">Limpieza</li>
-            </ul><img class="img-diferenciales" src="imagenes/diferenciales.jpg" >
+            </ul><img class="img-diferenciales" src="imagenes/utensilios.jpg" >
         </div>
         
         <div class="video-b">
