--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head> 
    
 <body>
+    <h1>Prueba cambios</h1>
     <header>
         <div class="contenedorEncabezado">
             <h1><img class="imgLogo" src="imagenes/logo.png" alt="Logo de la barbería"></h1>
