--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     </header>
 
     <main>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="productos.html">Productos</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+        </ul>
         <img class="banner" src="Imagenes/banner.jpg">
 
     <section class="container-principal">
