--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <h1>Prueba cambios</h1>
     <header>
+        <h1>Corregir main</h1>
         <div class="contenedorEncabezado">
             <h1><img class="imgLogo" src="imagenes/logo.png" alt="Logo de la barbería"></h1>
         
