Titulo en rama2

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </div>
     </header>
     <main>
+        <h1>Titulo en rama titulo</h1>
         <img class="banner" src="imagenes/banner.jpg">
 
     <section class="container-principal">
