--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </div>
     </header>
     <main>
+        <h1>Titulo de kubernetes</h1>
         <h1>Titulo en rama titulo</h1>
         <img class="banner" src="imagenes/banner.jpg">
 
