--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         </div>
     </header>
     <main>
+        <h1>Nombre ytarea urgente</h1>
+        <h1>Fiorella</h1>
+        <h1>Titulo en rama titulo</h1>
         <img class="banner" src="imagenes/banner.jpg">
         <h1>Titulo en rama titulo Persona 1</h1>
     <section class="container-principal">
